# sudoku

./: .gitignore  CMakeLists.txt  main.cpp
include/: table.h
src/: CMakeLists.txt  table.cpp
